Fix translations: Add proper Bengali and Arabic translations, update i18n config for all languages

--- a/frontend/src/locales/ar/translation.json
+++ b/frontend/src/locales/ar/translation.json
@@ -1,171 +1,170 @@
 {
-  "app_name": "HNV Property Management Solutions",
-  "app_name_short": "HNV Solutions",
+  "app_name": "حلول إدارة العقارات HNV",
+  "app_name_short": "حلول HNV",
   "header": {
-    "login": "Login",
-    "get_started": "Get Started"
+    "login": "تسجيل الدخول",
+    "get_started": "ابدأ الآن"
   },
   "nav": {
-    "home": "Home",
-    "about": "About",
-    "features": "Features",
-    "services": "Services",
-    "pricing": "Pricing",
-    "contact": "Contact",
-    "login": "Login",
-    "dashboard": "Dashboard"
+    "home": "الرئيسية",
+    "about": "حول",
+    "features": "المميزات",
+    "services": "الخدمات",
+    "pricing": "الأسعار",
+    "contact": "اتصل بنا",
+    "login": "تسجيل الدخول",
+    "dashboard": "لوحة التحكم"
   },
   "auth": {
-    "welcome_back": "Welcome Back!",
-    "sign_in_subtitle": "Sign in to continue to your dashboard",
-    "email_address": "Email Address",
-    "password": "Password",
-    "sign_in": "Sign In",
-    "continue_google": "Continue with Google",
-    "no_account": "Don't have an account?",
-    "sign_up": "Sign Up",
-    "or": "OR",
-    "forgot_password": "Forgot Password?",
-    "enter_email": "Enter your email address",
-    "enter_password": "Enter your password",
-    "remember_me": "Remember me",
-    "create_account": "Create Account",
-    "full_name": "Full Name",
-    "confirm_password": "Confirm Password",
-    "agree_terms": "I agree to the Terms of Service and Privacy Policy",
-    "agent": "Agent",
-    "check_email": "Check your email for verification link",
-    "create_password": "Create a strong password",
-    "enter_full_name": "Enter your full name",
-    "go_to_login": "Go to Login",
-    "have_account": "Already have an account?",
-    "join_thousands": "Join thousands of property managers",
-    "landlord": "Landlord",
-    "role": "Role",
-    "tenant": "Tenant",
-    "verification_sent": "Verification email sent"
+    "welcome_back": "مرحباً بعودتك!",
+    "sign_in_subtitle": "سجل دخولك للمتابعة إلى لوحة التحكم",
+    "email_address": "عنوان البريد الإلكتروني",
+    "password": "كلمة المرور",
+    "sign_in": "تسجيل الدخول",
+    "continue_google": "المتابعة مع جوجل",
+    "no_account": "ليس لديك حساب؟",
+    "sign_up": "إنشاء حساب",
+    "or": "أو",
+    "forgot_password": "نسيت كلمة المرور؟",
+    "enter_email": "أدخل عنوان بريدك الإلكتروني",
+    "enter_password": "أدخل كلمة المرور",
+    "remember_me": "تذكرني",
+    "create_account": "إنشاء حساب",
+    "full_name": "الاسم الكامل",
+    "confirm_password": "تأكيد كلمة المرور",
+    "agree_terms": "أوافق على شروط الخدمة وسياسة الخصوصية",
+    "agent": "وكيل",
+    "check_email": "تحقق من بريدك الإلكتروني للحصول على رابط التحقق",
+    "create_password": "إنشاء كلمة مرور قوية",
+    "enter_full_name": "أدخل اسمك الكامل",
+    "go_to_login": "الذهاب لتسجيل الدخول",
+    "have_account": "لديك حساب بالفعل؟",
+    "join_thousands": "انضم إلى آلاف مديري العقارات",
+    "landlord": "مالك العقار",
+    "role": "الدور",
+    "tenant": "مستأجر",
+    "verification_sent": "تم إرسال بريد التحقق"
   },
   "common": {
-    "loading": "Loading...",
-    "error": "Error",
-    "success": "Success",
-    "cancel": "Cancel",
-    "save": "Save",
-    "edit": "Edit",
-    "delete": "Delete",
-    "add": "Add",
-    "view": "View",
-    "close": "Close",
-    "confirm": "Confirm",
-    "yes": "Yes",
-    "no": "No",
-    "welcome_back_user": "Welcome back, {{name}}!",
-    "happening_today": "Here's what's happening with your properties today.",
-    "learn_more": "Learn More",
-    "analytics": "Analytics",
-    "payments": "Payments",
-    "actions": "Actions",
-    "status": "Status",
-    "name": "Name",
-    "email": "Email",
-    "phone": "Phone",
-    "address": "Address",
-    "city": "City",
-    "state": "State",
-    "zip_code": "Zip Code",
-    "country": "Country",
-    "date": "Date",
-    "amount": "Amount",
-    "description": "Description",
-    "type": "Type",
-    "active": "Active",
-    "inactive": "Inactive",
-    "pending": "Pending",
-    "approved": "Approved",
-    "rejected": "Rejected",
-    "all_languages": "All Languages",
-    "theme": "Theme",
-    "language": "Language",
-    "notifications": "Notifications",
-    "profile": "Profile",
-    "settings": "Settings",
-    "search": "Search...",
-    "search_placeholder": "Search properties, tenants, payments...",
-    "search_placeholder": "Search properties, tenants, payments...",
-    "filter": "Filters",
-    "clear_all": "Clear All",
-    "all": "All",
-    "more_options": "More Options",
-    "quick_links": "Quick Links",
-    "legal": "Legal",
-    "about": "About",
-    "features": "Features",
-    "privacy_policy": "Privacy Policy",
-    "terms_of_service": "Terms of Service",
-    "property_management": "Property Management",
-    "change_language": "Change Language",
-    "select_language": "Select Language",
-    "toggle_language": "Toggle Language",
-    "switch_to": "Switch to",
-    "current_language": "Current Language",
-    "start_date": "Start Date",
-    "end_date": "End Date"
+    "loading": "جاري التحميل...",
+    "error": "خطأ",
+    "success": "نجح",
+    "cancel": "إلغاء",
+    "save": "حفظ",
+    "edit": "تعديل",
+    "delete": "حذف",
+    "add": "إضافة",
+    "view": "عرض",
+    "close": "إغلاق",
+    "confirm": "تأكيد",
+    "yes": "نعم",
+    "no": "لا",
+    "welcome_back_user": "مرحباً بعودتك، {{name}}!",
+    "happening_today": "إليك ما يحدث مع عقاراتك اليوم.",
+    "learn_more": "تعلم المزيد",
+    "analytics": "التحليلات",
+    "payments": "المدفوعات",
+    "actions": "الإجراءات",
+    "status": "الحالة",
+    "name": "الاسم",
+    "email": "البريد الإلكتروني",
+    "phone": "الهاتف",
+    "address": "العنوان",
+    "city": "المدينة",
+    "state": "الولاية",
+    "zip_code": "الرمز البريدي",
+    "country": "البلد",
+    "date": "التاريخ",
+    "amount": "المبلغ",
+    "description": "الوصف",
+    "type": "النوع",
+    "active": "نشط",
+    "inactive": "غير نشط",
+    "pending": "معلق",
+    "approved": "موافق عليه",
+    "rejected": "مرفوض",
+    "all_languages": "جميع اللغات",
+    "theme": "المظهر",
+    "language": "اللغة",
+    "notifications": "الإشعارات",
+    "profile": "الملف الشخصي",
+    "settings": "الإعدادات",
+    "search": "بحث...",
+    "search_placeholder": "البحث في العقارات والمستأجرين والمدفوعات...",
+    "filter": "المرشحات",
+    "clear_all": "مسح الكل",
+    "all": "الكل",
+    "more_options": "المزيد من الخيارات",
+    "quick_links": "روابط سريعة",
+    "legal": "قانوني",
+    "about": "حول",
+    "features": "المميزات",
+    "privacy_policy": "سياسة الخصوصية",
+    "terms_of_service": "شروط الخدمة",
+    "property_management": "إدارة العقارات",
+    "change_language": "تغيير اللغة",
+    "select_language": "اختر اللغة",
+    "toggle_language": "تبديل اللغة",
+    "switch_to": "التبديل إلى",
+    "current_language": "اللغة الحالية",
+    "start_date": "تاريخ البداية",
+    "end_date": "تاريخ النهاية"
   },
   "dashboard": {
-    "overview": "Overview",
-    "properties": "Properties",
-    "tenants": "Tenants",
-    "settings": "Settings",
-    "logout": "Logout",
-    "maintenance": "Maintenance",
-    "expenses": "Expenses",
-    "cash_flow": "Cash Flow",
-    "reminders": "Reminders",
-    "approvals": "Approvals",
-    "users_invites": "Users & Invites",
-    "billing": "Billing",
-    "audit_log": "Audit Log",
-    "admin_panel": "Admin Panel",
-    "tenant_portal": "My Portal",
-    "monthly_revenue": "Monthly Revenue",
-    "total_properties": "Total Properties",
-    "active_tenants": "Active Tenants",
-    "occupancy_rate": "Occupancy Rate",
-    "loading_data": "Loading dashboard data...",
-    "overdue_rent_reminders": "Overdue Rent Reminders",
-    "send_reminder": "Send Reminder",
-    "no_overdue_rent": "No overdue rent payments",
-    "upcoming_lease_expirations": "Upcoming Lease Expirations",
-    "renew_lease": "Renew Lease",
-    "no_expiring_leases": "No expiring leases",
-    "financials_chart_title": "Financial Overview",
-    "rent_status_chart_title": "Rent Status",
-    "tenant_profile": "Tenant Profile",
-    "lease_information": "Lease Information",
-    "pending_approval_requests": "Pending Approval Requests",
-    "no_pending_requests": "No Pending Requests",
-    "manage_account_preferences": "Manage your account and preferences",
-    "profile_information": "Profile Information",
-    "email_notifications": "Email Notifications",
-    "push_notifications": "Push Notifications",
-    "automated_reminders": "Automated Reminders",
-    "add_new_reminder": "Add New Reminder",
-    "no_automated_reminders": "No Automated Reminders Configured",
-    "tenant": "Tenant",
-    "next_send": "Next Send",
-    "frequency": "Frequency",
-    "payments": "Payments",
-    "welcome_message": "Welcome to your dashboard",
-    "good_morning": "Good morning",
-    "good_afternoon": "Good afternoon",
-    "good_evening": "Good evening"
+    "overview": "نظرة عامة",
+    "properties": "العقارات",
+    "tenants": "المستأجرين",
+    "settings": "الإعدادات",
+    "logout": "تسجيل الخروج",
+    "maintenance": "الصيانة",
+    "expenses": "المصروفات",
+    "cash_flow": "التدفق النقدي",
+    "reminders": "التذكيرات",
+    "approvals": "الموافقات",
+    "users_invites": "المستخدمين والدعوات",
+    "billing": "الفواتير",
+    "audit_log": "سجل المراجعة",
+    "admin_panel": "لوحة الإدارة",
+    "tenant_portal": "بوابتي",
+    "monthly_revenue": "الإيرادات الشهرية",
+    "total_properties": "إجمالي العقارات",
+    "active_tenants": "المستأجرين النشطين",
+    "occupancy_rate": "معدل الإشغال",
+    "loading_data": "جاري تحميل بيانات لوحة التحكم...",
+    "overdue_rent_reminders": "تذكيرات الإيجار المتأخر",
+    "send_reminder": "إرسال تذكير",
+    "no_overdue_rent": "لا توجد مدفوعات إيجار متأخرة",
+    "upcoming_lease_expirations": "انتهاء صلاحية عقود الإيجار القادمة",
+    "renew_lease": "تجديد عقد الإيجار",
+    "no_expiring_leases": "لا توجد عقود إيجار منتهية الصلاحية",
+    "financials_chart_title": "نظرة عامة مالية",
+    "rent_status_chart_title": "حالة الإيجار",
+    "tenant_profile": "ملف المستأجر",
+    "lease_information": "معلومات عقد الإيجار",
+    "pending_approval_requests": "طلبات الموافقة المعلقة",
+    "no_pending_requests": "لا توجد طلبات معلقة",
+    "manage_account_preferences": "إدارة حسابك وتفضيلاتك",
+    "profile_information": "معلومات الملف الشخصي",
+    "email_notifications": "إشعارات البريد الإلكتروني",
+    "push_notifications": "الإشعارات المنبثقة",
+    "automated_reminders": "التذكيرات التلقائية",
+    "add_new_reminder": "إضافة تذكير جديد",
+    "no_automated_reminders": "لم يتم تكوين تذكيرات تلقائية",
+    "tenant": "مستأجر",
+    "next_send": "الإرسال التالي",
+    "frequency": "التكرار",
+    "payments": "المدفوعات",
+    "welcome_message": "مرحباً بك في لوحة التحكم",
+    "good_morning": "صباح الخير",
+    "good_afternoon": "مساء الخير",
+    "good_evening": "مساء الخير"
   },
   "hero": {
-    "title": "The All-in-One Platform for Modern Property Management",
-    "subtitle": "Streamline your property management with our comprehensive solution",
-    "cta_primary": "Start Your Free Trial",
-    "cta_secondary": "Watch Demo",
-    "trusted_by": "Trusted by property managers worldwide"
+    "title": "المنصة الشاملة لإدارة العقارات الحديثة",
+    "subtitle": "بسّط إدارة عقاراتك مع حلولنا الشاملة",
+    "cta_primary": "ابدأ تجربتك المجانية",
+    "cta_secondary": "شاهد العرض التوضيحي",
+    "trusted_by": "موثوق به من قبل مديري العقارات في جميع أنحاء العالم"
   },
   "landing": {
     "hero_title": "The All-in-One Platform for Modern Property Management",
@@ -304,39 +303,39 @@
     "passwords_dont_match": "Passwords don't match"
   },
   "property": {
-    "add_property": "Add Property",
-    "edit_property": "Edit Property",
-    "property_name": "Property Name",
-    "property_type": "Property Type",
-    "apartment": "Apartment",
-    "house": "House",
-    "commercial": "Commercial",
-    "other": "Other",
-    "rent_amount": "Rent Amount",
-    "security_deposit": "Security Deposit",
-    "available_units": "Available Units",
-    "total_units": "Total Units",
-    "loading_properties": "Loading properties...",
-    "manage_portfolio": "Manage your property portfolio",
-    "view": "View",
-    "edit": "Edit",
-    "no_properties_yet": "No Properties Yet",
-    "add_first_property": "Add Your First Property",
-    "add_new_property": "Add New Property",
-    "address": "Address",
-    "city": "City",
-    "state": "State",
-    "zip_code": "Zip Code",
-    "click_to_upload": "Click to upload image",
-    "enter_property_name": "Enter property name",
-    "inactive": "Inactive",
-    "active": "Active",
-    "number_of_units": "Number of Units",
-    "property_image": "Property Image",
-    "save_property": "Save Property",
-    "street_address": "Street Address",
-    "units": "Units",
-    "update_property": "Update Property"
+    "add_property": "إضافة عقار",
+    "edit_property": "تعديل العقار",
+    "property_name": "اسم العقار",
+    "property_type": "نوع العقار",
+    "apartment": "شقة",
+    "house": "منزل",
+    "commercial": "تجاري",
+    "other": "أخرى",
+    "rent_amount": "مبلغ الإيجار",
+    "security_deposit": "التأمين",
+    "available_units": "الوحدات المتاحة",
+    "total_units": "إجمالي الوحدات",
+    "loading_properties": "جاري تحميل العقارات...",
+    "manage_portfolio": "إدارة محفظة عقاراتك",
+    "view": "عرض",
+    "edit": "تعديل",
+    "no_properties_yet": "لا توجد عقارات بعد",
+    "add_first_property": "أضف عقارك الأول",
+    "add_new_property": "إضافة عقار جديد",
+    "address": "العنوان",
+    "city": "المدينة",
+    "state": "الولاية",
+    "zip_code": "الرمز البريدي",
+    "click_to_upload": "انقر لتحميل الصورة",
+    "enter_property_name": "أدخل اسم العقار",
+    "inactive": "غير نشط",
+    "active": "نشط",
+    "number_of_units": "عدد الوحدات",
+    "property_image": "صورة العقار",
+    "save_property": "حفظ العقار",
+    "street_address": "عنوان الشارع",
+    "units": "وحدات",
+    "update_property": "تحديث العقار"
   },
   "tenant": {
     "add_tenant": "Add Tenant",
