--- a/frontend/src/locales/bn/translation.json
+++ b/frontend/src/locales/bn/translation.json
@@ -1,171 +1,170 @@
 {
-  "app_name": "HNV Property Management Solutions",
-  "app_name_short": "HNV Solutions",
+  "app_name": "HNV সম্পত্তি ব্যবস্থাপনা সমাধান",
+  "app_name_short": "HNV সমাধান",
   "header": {
-    "login": "Login",
-    "get_started": "Get Started"
+    "login": "লগইন",
+    "get_started": "শুরু করুন"
   },
   "nav": {
-    "home": "Home",
-    "about": "About",
-    "features": "Features",
-    "services": "Services",
-    "pricing": "Pricing",
-    "contact": "Contact",
-    "login": "Login",
-    "dashboard": "Dashboard"
+    "home": "হোম",
+    "about": "সম্পর্কে",
+    "features": "বৈশিষ্ট্য",
+    "services": "সেবা",
+    "pricing": "মূল্য",
+    "contact": "যোগাযোগ",
+    "login": "লগইন",
+    "dashboard": "ড্যাশবোর্ড"
   },
   "auth": {
-    "welcome_back": "Welcome Back!",
-    "sign_in_subtitle": "Sign in to continue to your dashboard",
-    "email_address": "Email Address",
-    "password": "Password",
-    "sign_in": "Sign In",
-    "continue_google": "Continue with Google",
-    "no_account": "Don't have an account?",
-    "sign_up": "Sign Up",
-    "or": "OR",
-    "forgot_password": "Forgot Password?",
-    "enter_email": "Enter your email address",
-    "enter_password": "Enter your password",
-    "remember_me": "Remember me",
-    "create_account": "Create Account",
-    "full_name": "Full Name",
-    "confirm_password": "Confirm Password",
-    "agree_terms": "I agree to the Terms of Service and Privacy Policy",
-    "agent": "Agent",
-    "check_email": "Check your email for verification link",
-    "create_password": "Create a strong password",
-    "enter_full_name": "Enter your full name",
-    "go_to_login": "Go to Login",
-    "have_account": "Already have an account?",
-    "join_thousands": "Join thousands of property managers",
-    "landlord": "Landlord",
-    "role": "Role",
-    "tenant": "Tenant",
-    "verification_sent": "Verification email sent"
+    "welcome_back": "স্বাগতম!",
+    "sign_in_subtitle": "আপনার ড্যাশবোর্ডে যেতে সাইন ইন করুন",
+    "email_address": "ইমেইল ঠিকানা",
+    "password": "পাসওয়ার্ড",
+    "sign_in": "সাইন ইন",
+    "continue_google": "গুগল দিয়ে চালিয়ে যান",
+    "no_account": "কোন অ্যাকাউন্ট নেই?",
+    "sign_up": "সাইন আপ",
+    "or": "অথবা",
+    "forgot_password": "পাসওয়ার্ড ভুলে গেছেন?",
+    "enter_email": "আপনার ইমেইল ঠিকানা লিখুন",
+    "enter_password": "আপনার পাসওয়ার্ড লিখুন",
+    "remember_me": "আমাকে মনে রাখুন",
+    "create_account": "অ্যাকাউন্ট তৈরি করুন",
+    "full_name": "পূর্ণ নাম",
+    "confirm_password": "পাসওয়ার্ড নিশ্চিত করুন",
+    "agree_terms": "আমি সেবার শর্তাবলী এবং গোপনীয়তা নীতিতে সম্মত",
+    "agent": "এজেন্ট",
+    "check_email": "যাচাইকরণ লিঙ্কের জন্য আপনার ইমেইল চেক করুন",
+    "create_password": "একটি শক্তিশালী পাসওয়ার্ড তৈরি করুন",
+    "enter_full_name": "আপনার পূর্ণ নাম লিখুন",
+    "go_to_login": "লগইনে যান",
+    "have_account": "ইতিমধ্যে একটি অ্যাকাউন্ট আছে?",
+    "join_thousands": "হাজার হাজার সম্পত্তি ব্যবস্থাপকদের সাথে যোগ দিন",
+    "landlord": "বাড়িওয়ালা",
+    "role": "ভূমিকা",
+    "tenant": "ভাড়াটিয়া",
+    "verification_sent": "যাচাইকরণ ইমেইল পাঠানো হয়েছে"
   },
   "common": {
-    "loading": "Loading...",
-    "error": "Error",
-    "success": "Success",
-    "cancel": "Cancel",
-    "save": "Save",
-    "edit": "Edit",
-    "delete": "Delete",
-    "add": "Add",
-    "view": "View",
-    "close": "Close",
-    "confirm": "Confirm",
-    "yes": "Yes",
-    "no": "No",
-    "welcome_back_user": "Welcome back, {{name}}!",
-    "happening_today": "Here's what's happening with your properties today.",
-    "learn_more": "Learn More",
-    "analytics": "Analytics",
-    "payments": "Payments",
-    "actions": "Actions",
-    "status": "Status",
-    "name": "Name",
-    "email": "Email",
-    "phone": "Phone",
-    "address": "Address",
-    "city": "City",
-    "state": "State",
-    "zip_code": "Zip Code",
-    "country": "Country",
-    "date": "Date",
-    "amount": "Amount",
-    "description": "Description",
-    "type": "Type",
-    "active": "Active",
-    "inactive": "Inactive",
-    "pending": "Pending",
-    "approved": "Approved",
-    "rejected": "Rejected",
-    "all_languages": "All Languages",
-    "theme": "Theme",
-    "language": "Language",
-    "notifications": "Notifications",
-    "profile": "Profile",
-    "settings": "Settings",
-    "search": "Search...",
-    "search_placeholder": "Search properties, tenants, payments...",
-    "search_placeholder": "Search properties, tenants, payments...",
-    "filter": "Filters",
-    "clear_all": "Clear All",
-    "all": "All",
-    "more_options": "More Options",
-    "quick_links": "Quick Links",
-    "legal": "Legal",
-    "about": "About",
-    "features": "Features",
-    "privacy_policy": "Privacy Policy",
-    "terms_of_service": "Terms of Service",
-    "property_management": "Property Management",
-    "change_language": "Change Language",
-    "select_language": "Select Language",
-    "toggle_language": "Toggle Language",
-    "switch_to": "Switch to",
-    "current_language": "Current Language",
-    "start_date": "Start Date",
-    "end_date": "End Date"
+    "loading": "লোড হচ্ছে...",
+    "error": "ত্রুটি",
+    "success": "সফল",
+    "cancel": "বাতিল",
+    "save": "সংরক্ষণ",
+    "edit": "সম্পাদনা",
+    "delete": "মুছুন",
+    "add": "যোগ করুন",
+    "view": "দেখুন",
+    "close": "বন্ধ",
+    "confirm": "নিশ্চিত",
+    "yes": "হ্যাঁ",
+    "no": "না",
+    "welcome_back_user": "স্বাগতম, {{name}}!",
+    "happening_today": "আজ আপনার সম্পত্তিগুলির সাথে কী ঘটছে তা এখানে।",
+    "learn_more": "আরও জানুন",
+    "analytics": "বিশ্লেষণ",
+    "payments": "পেমেন্ট",
+    "actions": "কর্ম",
+    "status": "অবস্থা",
+    "name": "নাম",
+    "email": "ইমেইল",
+    "phone": "ফোন",
+    "address": "ঠিকানা",
+    "city": "শহর",
+    "state": "রাজ্য",
+    "zip_code": "জিপ কোড",
+    "country": "দেশ",
+    "date": "তারিখ",
+    "amount": "পরিমাণ",
+    "description": "বিবরণ",
+    "type": "ধরন",
+    "active": "সক্রিয়",
+    "inactive": "নিষ্ক্রিয়",
+    "pending": "অপেক্ষমাণ",
+    "approved": "অনুমোদিত",
+    "rejected": "প্রত্যাখ্যাত",
+    "all_languages": "সব ভাষা",
+    "theme": "থিম",
+    "language": "ভাষা",
+    "notifications": "বিজ্ঞপ্তি",
+    "profile": "প্রোফাইল",
+    "settings": "সেটিংস",
+    "search": "অনুসন্ধান...",
+    "search_placeholder": "সম্পত্তি, ভাড়াটিয়া, পেমেন্ট অনুসন্ধান করুন...",
+    "filter": "ফিল্টার",
+    "clear_all": "সব পরিষ্কার",
+    "all": "সব",
+    "more_options": "আরও বিকল্প",
+    "quick_links": "দ্রুত লিঙ্ক",
+    "legal": "আইনি",
+    "about": "সম্পর্কে",
+    "features": "বৈশিষ্ট্য",
+    "privacy_policy": "গোপনীয়তা নীতি",
+    "terms_of_service": "সেবার শর্তাবলী",
+    "property_management": "সম্পত্তি ব্যবস্থাপনা",
+    "change_language": "ভাষা পরিবর্তন",
+    "select_language": "ভাষা নির্বাচন",
+    "toggle_language": "ভাষা টগল",
+    "switch_to": "পরিবর্তন করুন",
+    "current_language": "বর্তমান ভাষা",
+    "start_date": "শুরুর তারিখ",
+    "end_date": "শেষ তারিখ"
   },
   "dashboard": {
-    "overview": "Overview",
-    "properties": "Properties",
-    "tenants": "Tenants",
-    "settings": "Settings",
-    "logout": "Logout",
-    "maintenance": "Maintenance",
-    "expenses": "Expenses",
-    "cash_flow": "Cash Flow",
-    "reminders": "Reminders",
-    "approvals": "Approvals",
-    "users_invites": "Users & Invites",
-    "billing": "Billing",
-    "audit_log": "Audit Log",
-    "admin_panel": "Admin Panel",
-    "tenant_portal": "My Portal",
-    "monthly_revenue": "Monthly Revenue",
-    "total_properties": "Total Properties",
-    "active_tenants": "Active Tenants",
-    "occupancy_rate": "Occupancy Rate",
-    "loading_data": "Loading dashboard data...",
-    "overdue_rent_reminders": "Overdue Rent Reminders",
-    "send_reminder": "Send Reminder",
-    "no_overdue_rent": "No overdue rent payments",
-    "upcoming_lease_expirations": "Upcoming Lease Expirations",
-    "renew_lease": "Renew Lease",
-    "no_expiring_leases": "No expiring leases",
-    "financials_chart_title": "Financial Overview",
-    "rent_status_chart_title": "Rent Status",
-    "tenant_profile": "Tenant Profile",
-    "lease_information": "Lease Information",
-    "pending_approval_requests": "Pending Approval Requests",
-    "no_pending_requests": "No Pending Requests",
-    "manage_account_preferences": "Manage your account and preferences",
-    "profile_information": "Profile Information",
-    "email_notifications": "Email Notifications",
-    "push_notifications": "Push Notifications",
-    "automated_reminders": "Automated Reminders",
-    "add_new_reminder": "Add New Reminder",
-    "no_automated_reminders": "No Automated Reminders Configured",
-    "tenant": "Tenant",
-    "next_send": "Next Send",
-    "frequency": "Frequency",
-    "payments": "Payments",
-    "welcome_message": "Welcome to your dashboard",
-    "good_morning": "Good morning",
-    "good_afternoon": "Good afternoon",
-    "good_evening": "Good evening"
+    "overview": "সংক্ষিপ্ত বিবরণ",
+    "properties": "সম্পত্তি",
+    "tenants": "ভাড়াটিয়া",
+    "settings": "সেটিংস",
+    "logout": "লগআউট",
+    "maintenance": "রক্ষণাবেক্ষণ",
+    "expenses": "খরচ",
+    "cash_flow": "নগদ প্রবাহ",
+    "reminders": "অনুস্মারক",
+    "approvals": "অনুমোদন",
+    "users_invites": "ব্যবহারকারী ও আমন্ত্রণ",
+    "billing": "বিলিং",
+    "audit_log": "অডিট লগ",
+    "admin_panel": "অ্যাডমিন প্যানেল",
+    "tenant_portal": "আমার পোর্টাল",
+    "monthly_revenue": "মাসিক আয়",
+    "total_properties": "মোট সম্পত্তি",
+    "active_tenants": "সক্রিয় ভাড়াটিয়া",
+    "occupancy_rate": "দখলের হার",
+    "loading_data": "ড্যাশবোর্ড ডেটা লোড হচ্ছে...",
+    "overdue_rent_reminders": "বকেয়া ভাড়ার অনুস্মারক",
+    "send_reminder": "অনুস্মারক পাঠান",
+    "no_overdue_rent": "কোন বকেয়া ভাড়া পেমেন্ট নেই",
+    "upcoming_lease_expirations": "আসন্ন লিজ মেয়াদ শেষ",
+    "renew_lease": "লিজ নবায়ন",
+    "no_expiring_leases": "কোন মেয়াদ শেষ হওয়া লিজ নেই",
+    "financials_chart_title": "আর্থিক সংক্ষিপ্ত বিবরণ",
+    "rent_status_chart_title": "ভাড়ার অবস্থা",
+    "tenant_profile": "ভাড়াটিয়ার প্রোফাইল",
+    "lease_information": "লিজের তথ্য",
+    "pending_approval_requests": "অপেক্ষমাণ অনুমোদনের অনুরোধ",
+    "no_pending_requests": "কোন অপেক্ষমাণ অনুরোধ নেই",
+    "manage_account_preferences": "আপনার অ্যাকাউন্ট এবং পছন্দ পরিচালনা করুন",
+    "profile_information": "প্রোফাইল তথ্য",
+    "email_notifications": "ইমেইল বিজ্ঞপ্তি",
+    "push_notifications": "পুশ বিজ্ঞপ্তি",
+    "automated_reminders": "স্বয়ংক্রিয় অনুস্মারক",
+    "add_new_reminder": "নতুন অনুস্মারক যোগ করুন",
+    "no_automated_reminders": "কোন স্বয়ংক্রিয় অনুস্মারক কনফিগার করা হয়নি",
+    "tenant": "ভাড়াটিয়া",
+    "next_send": "পরবর্তী পাঠানো",
+    "frequency": "ফ্রিকোয়েন্সি",
+    "payments": "পেমেন্ট",
+    "welcome_message": "আপনার ড্যাশবোর্ডে স্বাগতম",
+    "good_morning": "সুপ্রভাত",
+    "good_afternoon": "শুভ বিকাল",
+    "good_evening": "শুভ সন্ধ্যা"
   },
   "hero": {
-    "title": "The All-in-One Platform for Modern Property Management",
-    "subtitle": "Streamline your property management with our comprehensive solution",
-    "cta_primary": "Start Your Free Trial",
-    "cta_secondary": "Watch Demo",
-    "trusted_by": "Trusted by property managers worldwide"
+    "title": "আধুনিক সম্পত্তি ব্যবস্থাপনার জন্য সর্বাত্মক প্ল্যাটফর্ম",
+    "subtitle": "আমাদের ব্যাপক সমাধানের সাথে আপনার সম্পত্তি ব্যবস্থাপনা সহজ করুন",
+    "cta_primary": "আপনার বিনামূল্যে ট্রায়াল শুরু করুন",
+    "cta_secondary": "ডেমো দেখুন",
+    "trusted_by": "বিশ্বব্যাপী সম্পত্তি ব্যবস্থাপকদের দ্বারা বিশ্বস্ত"
   },
   "landing": {
     "hero_title": "The All-in-One Platform for Modern Property Management",
@@ -304,39 +303,39 @@
     "passwords_dont_match": "Passwords don't match"
   },
   "property": {
-    "add_property": "Add Property",
-    "edit_property": "Edit Property",
-    "property_name": "Property Name",
-    "property_type": "Property Type",
-    "apartment": "Apartment",
-    "house": "House",
-    "commercial": "Commercial",
-    "other": "Other",
-    "rent_amount": "Rent Amount",
-    "security_deposit": "Security Deposit",
-    "available_units": "Available Units",
-    "total_units": "Total Units",
-    "loading_properties": "Loading properties...",
-    "manage_portfolio": "Manage your property portfolio",
-    "view": "View",
-    "edit": "Edit",
-    "no_properties_yet": "No Properties Yet",
-    "add_first_property": "Add Your First Property",
-    "add_new_property": "Add New Property",
-    "address": "Address",
-    "city": "City",
-    "state": "State",
-    "zip_code": "Zip Code",
-    "click_to_upload": "Click to upload image",
-    "enter_property_name": "Enter property name",
-    "inactive": "Inactive",
-    "active": "Active",
-    "number_of_units": "Number of Units",
-    "property_image": "Property Image",
-    "save_property": "Save Property",
-    "street_address": "Street Address",
-    "units": "Units",
-    "update_property": "Update Property"
+    "add_property": "সম্পত্তি যোগ করুন",
+    "edit_property": "সম্পত্তি সম্পাদনা",
+    "property_name": "সম্পত্তির নাম",
+    "property_type": "সম্পত্তির ধরন",
+    "apartment": "অ্যাপার্টমেন্ট",
+    "house": "বাড়ি",
+    "commercial": "বাণিজ্যিক",
+    "other": "অন্যান্য",
+    "rent_amount": "ভাড়ার পরিমাণ",
+    "security_deposit": "জামানত",
+    "available_units": "উপলব্ধ ইউনিট",
+    "total_units": "মোট ইউনিট",
+    "loading_properties": "সম্পত্তি লোড হচ্ছে...",
+    "manage_portfolio": "আপনার সম্পত্তি পোর্টফোলিও পরিচালনা করুন",
+    "view": "দেখুন",
+    "edit": "সম্পাদনা",
+    "no_properties_yet": "এখনও কোন সম্পত্তি নেই",
+    "add_first_property": "আপনার প্রথম সম্পত্তি যোগ করুন",
+    "add_new_property": "নতুন সম্পত্তি যোগ করুন",
+    "address": "ঠিকানা",
+    "city": "শহর",
+    "state": "রাজ্য",
+    "zip_code": "জিপ কোড",
+    "click_to_upload": "ছবি আপলোড করতে ক্লিক করুন",
+    "enter_property_name": "সম্পত্তির নাম লিখুন",
+    "inactive": "নিষ্ক্রিয়",
+    "active": "সক্রিয়",
+    "number_of_units": "ইউনিটের সংখ্যা",
+    "property_image": "সম্পত্তির ছবি",
+    "save_property": "সম্পত্তি সংরক্ষণ",
+    "street_address": "রাস্তার ঠিকানা",
+    "units": "ইউনিট",
+    "update_property": "সম্পত্তি আপডেট"
   },
   "tenant": {
     "add_tenant": "Add Tenant",
