--- a/frontend/src/locales/fr/translation.json
+++ b/frontend/src/locales/fr/translation.json
@@ -16,49 +16,49 @@
     "dashboard": "Dashboard"
   },
   "auth": {
-    "welcome_back": "Bon retour !",
-    "sign_in_subtitle": "Connectez-vous pour accéder à votre tableau de bord",
-    "email_address": "Adresse e-mail",
-    "password": "Mot de passe",
-    "sign_in": "Se connecter",
-    "continue_google": "Continuer avec Google",
-    "no_account": "Vous n'avez pas de compte ?",
-    "sign_up": "S'inscrire",
-    "or": "OU",
-    "forgot_password": "Mot de passe oublié ?",
-    "enter_email": "Entrez votre adresse e-mail",
-    "enter_password": "Entrez votre mot de passe",
-    "remember_me": "Se souvenir de moi",
-    "create_account": "Créer un compte",
-    "full_name": "Nom complet",
-    "confirm_password": "Confirmer le mot de passe",
-    "agree_terms": "J'accepte les Conditions de Service et la Politique de Confidentialité",
+    "welcome_back": "Welcome Back!",
+    "sign_in_subtitle": "Sign in to continue to your dashboard",
+    "email_address": "Email Address",
+    "password": "Password",
+    "sign_in": "Sign In",
+    "continue_google": "Continue with Google",
+    "no_account": "Don't have an account?",
+    "sign_up": "Sign Up",
+    "or": "OR",
+    "forgot_password": "Forgot Password?",
+    "enter_email": "Enter your email address",
+    "enter_password": "Enter your password",
+    "remember_me": "Remember me",
+    "create_account": "Create Account",
+    "full_name": "Full Name",
+    "confirm_password": "Confirm Password",
+    "agree_terms": "I agree to the Terms of Service and Privacy Policy",
     "agent": "Agent",
-    "check_email": "Vérifiez votre e-mail pour le lien de vérification",
-    "create_password": "Créez un mot de passe fort",
-    "enter_full_name": "Entrez votre nom complet",
-    "go_to_login": "Aller à la connexion",
-    "have_account": "Vous avez déjà un compte ?",
-    "join_thousands": "Rejoignez des milliers de gestionnaires immobiliers",
-    "landlord": "Propriétaire",
-    "role": "Rôle",
-    "tenant": "Locataire",
-    "verification_sent": "E-mail de vérification envoyé"
+    "check_email": "Check your email for verification link",
+    "create_password": "Create a strong password",
+    "enter_full_name": "Enter your full name",
+    "go_to_login": "Go to Login",
+    "have_account": "Already have an account?",
+    "join_thousands": "Join thousands of property managers",
+    "landlord": "Landlord",
+    "role": "Role",
+    "tenant": "Tenant",
+    "verification_sent": "Verification email sent"
   },
   "common": {
-    "loading": "Chargement...",
-    "error": "Erreur",
-    "success": "Succès",
-    "cancel": "Annuler",
-    "save": "Enregistrer",
-    "edit": "Modifier",
-    "delete": "Supprimer",
-    "add": "Ajouter",
-    "view": "Voir",
-    "close": "Fermer",
-    "confirm": "Confirmer",
-    "yes": "Oui",
-    "no": "Non",
+    "loading": "Loading...",
+    "error": "Error",
+    "success": "Success",
+    "cancel": "Cancel",
+    "save": "Save",
+    "edit": "Edit",
+    "delete": "Delete",
+    "add": "Add",
+    "view": "View",
+    "close": "Close",
+    "confirm": "Confirm",
+    "yes": "Yes",
+    "no": "No",
     "welcome_back_user": "Welcome back, {{name}}!",
     "happening_today": "Here's what's happening with your properties today.",
     "learn_more": "Learn More",
@@ -91,7 +91,6 @@
     "settings": "Settings",
     "search": "Search...",
     "search_placeholder": "Search properties, tenants, payments...",
-    "search_placeholder": "Search properties, tenants, payments...",
     "filter": "Filters",
     "clear_all": "Clear All",
     "all": "All",
@@ -112,21 +111,21 @@
     "end_date": "End Date"
   },
   "dashboard": {
-    "overview": "Aperçu",
-    "properties": "Propriétés",
-    "tenants": "Locataires",
-    "settings": "Paramètres",
-    "logout": "Déconnexion",
+    "overview": "Overview",
+    "properties": "Properties",
+    "tenants": "Tenants",
+    "settings": "Settings",
+    "logout": "Logout",
     "maintenance": "Maintenance",
-    "expenses": "Dépenses",
-    "cash_flow": "Flux de trésorerie",
-    "reminders": "Rappels",
-    "approvals": "Approbations",
-    "users_invites": "Utilisateurs et invitations",
-    "billing": "Facturation",
-    "audit_log": "Journal d'audit",
-    "admin_panel": "Panneau d'administration",
-    "tenant_portal": "Mon portail",
+    "expenses": "Expenses",
+    "cash_flow": "Cash Flow",
+    "reminders": "Reminders",
+    "approvals": "Approvals",
+    "users_invites": "Users & Invites",
+    "billing": "Billing",
+    "audit_log": "Audit Log",
+    "admin_panel": "Admin Panel",
+    "tenant_portal": "My Portal",
     "monthly_revenue": "Monthly Revenue",
     "total_properties": "Total Properties",
     "active_tenants": "Active Tenants",
@@ -168,14 +167,14 @@
     "trusted_by": "Trusted by property managers worldwide"
   },
   "landing": {
-    "hero_title": "La plateforme tout-en-un pour la gestion immobilière moderne",
-    "hero_subtitle": "Automatisez les tâches, suivez les finances et gérez les locataires facilement.",
-    "hero_cta": "Commencez votre essai gratuit",
-    "real_stats_title": "Fait confiance par les gestionnaires immobiliers du monde entier",
-    "properties_managed": "Propriétés gérées",
-    "active_users": "Utilisateurs actifs",
-    "countries_served": "Pays desservis",
-    "uptime_guarantee": "Garantie de temps de fonctionnement"
+    "hero_title": "The All-in-One Platform for Modern Property Management",
+    "hero_subtitle": "Automate tasks, track finances, and manage tenants with ease.",
+    "hero_cta": "Start Your Free Trial",
+    "real_stats_title": "Trusted by Property Managers Worldwide",
+    "properties_managed": "Properties Managed",
+    "active_users": "Active Users",
+    "countries_served": "Countries Served",
+    "uptime_guarantee": "Uptime Guarantee"
   },
   "about": {
     "title": "Why Choose Our Platform?",
